--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "accelerate>=1.10.1",
     "anthropic>=0.66.0",
     "datasets>=4.0.0",
+    "matplotlib>=3.10.6",
     "numpy>=2.2.6",
     "openai>=1.107.0",
     "peft>=0.17.1",
